--- a/partials/treemaker.html
+++ b/partials/treemaker.html
@@ -11,7 +11,7 @@
                 <form id="addNodeForm" action="javascript:$('#addNodeForm').submit();">
                     <fieldset>
                         <label>Title:</label><input type="text" name="title" required="required"/>
-                        <label>Link:</label><input type="text" name="link" required="required"/>
+                        <label>Link:</label><input type="url" name="link" required="required"/>
                         <label>Description:</label><textarea name="desc" required="required"></textarea>
                         <br/>
                         <input type="submit" value="Save Node" class="submit btn btn-primary saveButton"/>
