--- a/public/partials/initial.html
+++ b/public/partials/initial.html
@@ -12,8 +12,8 @@
         <div class="span10">
             <h3>Start Here</h3>
             <h4>Search for Trees</h4>
-            <form class="form-search">
-                <input type="text" placeholder="Search term..."/>
+            <form id="searchTreesForm" class="form-search" action="javascript:getTree();">
+                <input id="searchTermBox" type="text" placeholder="Search term..."/>
                 <button type="submit" class="btn" ><i class="icon-search"></i></button>
             </form>
             <h4>Didn't find what you wanted?</h4>
@@ -21,3 +21,19 @@
         </div>
     </div>
 </div>
+
+<script>
+    var getTree = function () {
+        var searchTerm = $("#searchTermBox").val();
+
+        $.ajax({
+            type: "GET",
+            url: "https://mhacks-epicskilltree.rhcloud.com/treecontrol/gettree?treename=" + searchTerm,
+            done: function (response) {
+                alert(response);
+            }
+        });
+    }
+
+    $("#searchTreesForm").submit(getTree());
+</script>
